# VAC-Downloader

./: .gitignore  CHANGELOG.md  CODE_REVIEW_REPORT.md  Cargo.toml  README.md  config.toml.example
examples/: list_vacs.rs
src/: config.rs  downloader.rs  lib.rs  main.rs
src/cli/: main.rs
src/lib/: auth.rs  database.rs  downloader.rs  lib.rs  models.rs
