[package]
name = "vac_downloader"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jcorbier/VAC-Downloader"
description = "Rust crate/tool to download and keep up-to-date versions of the French Visual Approach Charts"
readme = "README.md"
authors = ["Jeremie Corbier <jeremie.corbier@gmail.com>"]

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "vac-downloader"
path = "src/cli/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
sha2 = "0.10"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
